--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: tonic-starter
-description: ""
+title: rat-theme
+description: "Jekyll theme for people who love rats"
 encoding: utf-8
 
 exclude: ["README.md", "LICENSE", "*.gem", "*.gemspec", "Gemfile.lock"]
